--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         class = "icon"
                         />
                         <h3>Experience</h3>
-                        <p>No Experiences <br />hhhhhhhh    hguyf</p>
+                        <p>No Experiences <br /></p>
                     </div>
                     <div class = "details-container">
                         <img 
@@ -94,6 +94,7 @@
                         class = "icon"/>
                         <h3>Education</h3>
                         <p>Undergrad Student<br />of software engineering</p>
+                        <h3>Shahjalal university Of science and tech</h3>
                     </div>
                 </div>
                 <div class = "text-container">
