--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                         class = "icon"
                         />
                         <h3>Experience</h3>
-                        <p>No Experiences <br /></p>
+                        <p>No Experiences in Job field. Although I have worked in various event such as<br />
+                        SWE Technovent 2024, several Sports week</p>
                     </div>
                     <div class = "details-container">
                         <img 
@@ -100,7 +101,8 @@
                 <div class = "text-container">
                 <p>I am now a Undergrad student of shahjala university of science and tech. Other than academical
                     I like to do debate, I like to Cp sometimes, Moreover I try my best to be active and I do good work under pressure.Although I havn't decided 
-                    I should work on but I like artificial intelligence, machine learning and backend developing. Hope I can do a Good work in future.
+                    I should work on but I like artificial intelligence, machine learning and backend developing. Hope I can do a Good work in future.I have worked 
+                    with SWE society and SUDS. So, I can work with team quite nicely.
                     </p>
 
                 </div>
