--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul class = "nav-links">
                 <li><a href = "#about" >About Me</a></li>
                 <li><a href = "#projects">Projects</a></li>
-                <li><a href = "#experience">EXperience</a></li>
-                <li><a href = "#contact">contact</a></li>
+                <li><a href = "#experience">Experience</a></li>
+                <li><a href = "#contact">Contact</a></li>
                 <!-- <li><a href = "#nodecision">janina</a></li> -->
                 
             </ul>
@@ -52,7 +52,7 @@
             <p class = "section__text__p2">Undergrad Student</p>
             <div class = "btn-container">
                 <button class = "btn btn-color-2" onclick ="location.href = 'https://nairobi-j.github.io/web_tech/'">
-                    Here My CV
+                    Here is My CV
                 </button>
                 <button class = "btn btn-color-2" onclick = "location.href = './#contact'">
                     Contact Info
@@ -99,8 +99,8 @@
                     </div>
                 </div>
                 <div class = "text-container">
-                <p>I am now a Undergrad student of shahjala university of science and tech. Other than academical
-                    I like to do debate, I like to Cp sometimes, Moreover I try my best to be active and I do good work under pressure.Although I havn't decided 
+                <p>I am now a Undergrad student of shahjalal university of science and tech. Other than academic life
+                    I like to do debate, I like to Cp sometimes, Moreover I try my best to be active and I do good work under pressure.Although I havn't decided yet 
                     I should work on but I like artificial intelligence, machine learning and backend developing. Hope I can do a Good work in future.I have worked 
                     with SWE society and SUDS. So, I can work with team quite nicely.
                     </p>
@@ -245,7 +245,7 @@
      > 
      </section>
      <section id = "contact">
-        <p class = "section__text__p1">get in touch</p>
+        <p class = "section__text__p1">Get in touch</p>
         <h1 class = "title">Contact me</h1>
         <div class = "contact-info-upper-container">
             <div class = "contact-info-container">
